--- a/.github/workflows/openwrt6.6.yml
+++ b/.github/workflows/openwrt6.6.yml
@@ -16,8 +16,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  schedule:
-    - cron: 30 0 * * 3,5
+  #schedule:
+   # - cron: 30 0 * * 3,5
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
